# zrive-ds

./: .gitignore  pyproject.toml
src/module_1/: module_1_meteo_api.py
src/module_2/: 01_download_datasets.ipynb  01_eda_groceries.ipynb  01_eda_groceries.md  02_eda_groceries_ready_dataset.ipynb  02_eda_groceries_ready_dataset.md  download_datasets.py
src/module_3/: linear_models.ipynb  linear_models.md
src/module_4/: non_linear_models.ipynb  non_linear_models.md
tests/module_1/: test_meteo_api.py
